--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -49,7 +51,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.BarnaOszkarJA7NV5csaladfa" />
 
-
+        <service android:name=".NotificationService" android:exported="false" />
 
     </application>
 
